# mon-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  codecov.yml  commitlint.config.js  docker-compose.yml
.github/agents/: copilot-instructions.md
.github/workflows/: lint.yml  test-backend.yml  test-frontend.yml
.specify/memory/: constitution.md
backend/: .env.example  .env.test  .gitignore  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py  worker.py
backend/app/api/v1/: __init__.py  dependencies.py
backend/app/api/v1/routes/: __init__.py  auth.py  availabilities.py  departments.py  plannings.py  services.py  users.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/domain/: __init__.py
backend/app/models/: __init__.py  availability.py  department.py  member.py  organization.py  planning.py  planning_assignment.py  refresh_token.py  service.py  user.py
backend/app/repositories/: __init__.py  availability_repository.py  department_repository.py  member_repository.py  planning_assignment_repository.py  planning_repository.py  service_repository.py  user_repository.py
backend/app/schemas/: __init__.py  auth.py  availability.py  planning.py  user.py
backend/app/schemas/requests/: __init__.py
backend/app/scripts/: __init__.py  seed_dev.py
backend/app/services/: __init__.py  auth_service.py  availability_service.py  email_service.py  planning_generator.py  planning_service.py  service_service.py
backend/app/templates/email/: base.html  email_verification.html  invitation.html  password_reset.html
backend/app/websockets/: __init__.py
backend/app/workers/: __init__.py
backend/app/workers/tasks/: __init__.py  email_tasks.py
backend/docs/: logging-configuration.md
backend/migrations/: env.py
backend/migrations/versions/: 01ce92d51b38_create_initial_schema.py  076396980932_add_service_planning_assignment_models.py  0ec1aa542677_change_member_skills_to_json.py  6b6da3eebbcd_add_department_member_availability_.py  b0c7bfbf8937_initial_setup.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_routes.py  test_availability_routes.py  test_database_connection.py
backend/tests/unit/: test_auth_service.py  test_database.py  test_logging.py  test_middleware.py  test_schemas_auth.py  test_security.py
backend/tests/unit/api/v1/: test_dependencies.py
backend/tests/unit/models/: test_organization.py  test_refresh_token.py  test_user.py
backend/tests/unit/repositories/: __init__.py  test_user_repository.py
backend/tests/unit/services/: test_availability_service.py
docs/: deployment.md  google-oauth-setup.md  importing-github-issues.md
frontend/: .prettierignore  .prettierrc  eslint.config.mjs  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/: .gitkeep  layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(dashboard)/: .gitkeep  layout.tsx  page.tsx
frontend/app/[locale]/: layout.tsx  not-found.tsx  page.tsx
frontend/app/[locale]/(auth)/: layout.tsx
frontend/app/[locale]/(auth)/forgot-password/: page.tsx
frontend/app/[locale]/(auth)/login/: page.tsx
frontend/app/[locale]/(dashboard)/: page.tsx
frontend/app/[locale]/dashboard/: layout.tsx  page.tsx
frontend/app/api/: .gitkeep
frontend/components/: component-example.tsx
frontend/components/calendar/: .gitkeep  availability-calendar.tsx
frontend/components/examples/: query-example.tsx
frontend/components/forms/: .gitkeep
frontend/components/layouts/: app-sidebar.tsx
frontend/components/planning/: .gitkeep
frontend/components/providers/: api-provider.tsx  query-provider.tsx
frontend/components/shared/: language-switcher.tsx
frontend/components/ui/: alert-dialog.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  combobox.tsx  dropdown-menu.tsx  field.tsx  input-group.tsx  select.tsx  sheet.tsx  sidebar.tsx  table.tsx  tooltip.tsx
frontend/config/: site.ts
frontend/docs/: tanstack-query.md  zustand-stores.md
frontend/hooks/: use-mobile.ts  useApi.ts  useAuth.ts  useQuery.ts
frontend/i18n/: navigation.ts  request.ts  routing.ts  types.ts
frontend/lib/: api.ts  constants.ts  query-client.ts
frontend/messages/: en.json  fr.json
frontend/stores/: auth.ts  index.ts  ui.ts
frontend/tests/e2e/: .gitkeep
frontend/types/: index.ts
scripts/: .gitignore  README.md  create_github_issues.py
specs/: .gitignore
specs/001-church-team-management/: data-model.md  github-issues.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-church-team-management/checklists/: requirements.md
specs/001-church-team-management/contracts/: openapi.yaml  websocket-events.md
(+6 files in other folders)
