[project]
name = "monservice-backend"
version = "0.1.0"
description = "Backend API for MonService - Church Team Management SaaS"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Regi Gouale", email = "regi@gouale.dev" }]
keywords = ["fastapi", "church", "team-management", "saas"]
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "bcrypt>=4.0.0",
    "celery>=5.6.0",
    "email-validator>=2.3.0",
    "fastapi>=0.127.1",
    "fastapi-mail>=1.6.1",
    "google-auth>=2.38.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "PyJWT>=2.10.0",
    "python-multipart>=0.0.21",
    "python-socketio>=5.16.0",
    "redis>=7.1.0",
    "requests>=2.32.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.10",
    "types-passlib>=1.7.7",
]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = ["E501", "B008", "B904"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery.*", "passlib.*", "jose.*", "jwt.*", "pydantic_settings.*", "bcrypt.*", "google.auth.*", "google.oauth2.*", "fastapi_mail.*", "jinja2.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app.workers.tasks.*"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["app.services.auth_service"]
disallow_untyped_calls = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing"
markers = [
    "integration: marks tests as integration tests (require running PostgreSQL)",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "app/main.py",
    "app/worker.py",
    "app/scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
